fix(employeur): alignement et espacement lien

--- a/src/client/components/features/JeDeviensMentor/AidesExceptionnelles/AidesExceptionnelles.module.scss
+++ b/src/client/components/features/JeDeviensMentor/AidesExceptionnelles/AidesExceptionnelles.module.scss
@@ -6,10 +6,14 @@
 
   &Container {
     @extend %max-container;
-    display: grid;
+    display: flex;
+    flex-direction: column;
     gap: 2rem;
     padding: 0 1.5rem;
-    place-items: center;
+
+    @include media(medium) {
+      align-items: center;
+    }
 
     &Titre {
       color: $color-primary;
